// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTL InvalidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 9,
        },
        Object {
          "color": "rgb(255, 84, 82)",
        },
      ],
    ]
  }
>
  
</Text>
`;

exports[`RTL ValidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 9,
        },
        Object {
          "color": "rgb(0, 215, 117)",
        },
      ],
    ]
  }
>
  
</Text>
`;
